- Fixed bug #21611 (version_compare() does not support "p" suffix)